feat(api-gateway): update CORS, authentication filter, JWT utility, and config